2011-11-21 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    Apply consistent checking of pole to eliminate disagreements. (Bug 3437555: Graphical Glitch Plotting Footprints near pole)

2011-11-13 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-module-popup.c
    * src/gtk-rot-knob.c
    * src/gtk-sky-glance.c
    * src/gtk-rig-ctrl.c
    * src/gtk-sat-list.c
    * src/gtk-sat-module.c
    * src/gtk-sat-list-col-sel.c
    * src/gtk-sat-selector.c
    * src/gtk-single-sat.c
    * src/gtk-polar-plot.c
    * src/gtk-event-list.c
    * src/gtk-sat-map.c
    * src/gtk-freq-knob.c
    * src/gtk-rot-ctrl.c
    * src/gtk-azel-plot.c
    * src/gtk-polar-view.c
    Eliminate compiler warnings.


2011-11-12 Charles Suprin <hamaa1vs at gmail.com>

    * doc/um/gpredict-user-manual.odt
    Update user manual for GPSD and other features.

    * src/gtk-sat-module-popup.c
    Sort satellite list in popup.

    * src/tle-update.c
    Change decision of two versus three line tle's to do simpler checks first.


2011-11-06 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    Add comments.

    * src/gtk-polar-view.c
    * src/gtk-polar-view.h
    * src/gtk-polar-view-popup.c
    Eliminate duplicate code in polar view and the popup.


2011-11-05 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-polar-view.c
    Remove memory leak.


2011-11-03 Charles Suprin <hamaa1vs at gmail.com>

    * src/qth-data.c
    Maintain Maidenhead grid (length 4 characters) for qth in qra field.


2011-10-29 Charles Suprin <hamaa1vs at gmail.com>

    * data/trsp/37841.trsp
    Move SRVMU to correct catalog number.

    * data/trsp/37841.trsp
    Add transponder data for JUGNU.

    * src/gtk-event-list-popup.c
    * src/gtk-sat-list-popup.c
    * src/gtk-sat-map-popup.c
    * src/gtk-polar-view-popup.c
    * src/gtk-single-sat.c
    * NEWS
    Add current pass menuitem to popups. (Bug 3292729: Show next pass shows the current pass.)

